# phprs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  PERFORMANCE.md  PHP_PKG_STATUS.md  QUICKSTART.md  README.md  SPEC.md  TODO.md
.cargo/: config.toml
examples/: 01_hello_world.php  02_variables.php  03_arithmetic.php  04_comparison.php  05_control_flow.php  06_strings.php  07_var_check.php  08_array_functions.php  09_null_coalesce.php  09_string_functions.php  09_type_check.php  README.md  STREAMS-REGEX-PDO-README.md  TEST-GUIDE.md  TESTING-SUMMARY.md  array_operations.php  attributes.php  basic_types.php  classes.php  control_flow.php  error_handling.php  filesystem.php  functions.php  generators.php  http-stream-examples.php  integration-test.php  match_expression.php  mbstring.php  operators.php  pdo-examples.php  regex-examples.php  run-all-tests.sh  session-examples.php  string_operations.php  test-streams-regex-pdo.php  variables.php
examples/codeigniter/: README.md
examples/codeigniter/app/Config/: Paths.php  Routes.php
examples/codeigniter/app/Controllers/: Home.php
examples/codeigniter/public/: index.php
examples/codeigniter/system/: Router.php  bootstrap.php
examples/codeigniter/system/Config/: Autoload.php  Constants.php
examples/drupal/: README.md  index.php
examples/drupal/core/includes/: bootstrap.inc.php
examples/drupal/core/lib/: Drupal.php  DrupalKernel.php
examples/drupal/core/lib/Drupal/Core/Extension/: ModuleHandler.php
examples/rust/: basic_types.rs  error_handling.rs  filesystem.rs  hash_table.rs  memory_management.rs  operators.rs  performance_demo.rs  runtime.rs  string_operations.rs
examples/wordpress/: README.md  THEME-PLUGIN-README.md  index.php  test-theme-plugin.php  wp-blog-header.php  wp-config.php  wp-load.php  wp-settings.php
examples/wordpress/wp-content/plugins/example-plugin/: example-plugin.php
examples/wordpress/wp-content/themes/example-theme/: functions.php  style.css
examples/wordpress/wp-includes/: functions.php  plugin.php  session.php  theme.php  wp-db.php
src/: lib.rs
src/engine/: alloc.rs  array_ops.rs  ast.rs  benchmark.rs  errors.rs  exception.rs  function_optimizer.rs  gc.rs  hash.rs  jit.rs  mod.rs  opcode_cache.rs  operators.rs  perf.rs  perf_alloc.rs  string.rs  types.rs
src/engine/alloc/: tests.rs
src/engine/compile/: context.rs  control_flow.rs  function.rs  function_table.rs  mod.rs  tests.rs
src/engine/compile/expression/: helpers.rs  mod.rs  operators.rs  primary.rs
src/engine/compile/statement/: mod.rs  oop.rs
src/engine/exception/: tests.rs
src/engine/facade/: factory.rs  mod.rs  parser.rs  stream.rs
src/engine/gc/: tests.rs
src/engine/hash/: tests.rs
src/engine/lexer/: core.rs  keywords.rs  mod.rs  readers.rs  tests.rs  tokens.rs
src/engine/string/: tests.rs
src/engine/types/: tests.rs
src/engine/vm/: builtin_capability_tests.rs  builtins.rs  dispatch_handlers.rs  execute.rs  execute_data.rs  format.rs  handlers.rs  mod.rs  opcodes.rs  tests.rs
src/php/: datetime.rs  extension.rs  filesystem.rs  globals.rs  hash.rs  http_stream.rs  ini.rs  math.rs  mbstring.rs  mod.rs  output.rs  pdo.rs  regex.rs  runtime.rs  sapi.rs  streams.rs  url.rs  variables.rs
src/php/filesystem/: tests.rs
src/php/globals/: tests.rs
src/php/ini/: tests.rs
src/php/output/: tests.rs
src/php/runtime/: tests.rs
src/php/sapi/: tests.rs
src/php/streams/: tests.rs
src/php/variables/: tests.rs
tests/: README.md  build_rust_examples.rs  comprehensive_tests.rs  edge_cases.rs  error_handling.rs  example_verification.rs  examples_runtime.rs  integration_tests.rs  php_examples.rs
