[package]
name = "phprs"
version = "0.1.0"
authors = ["Ying kit WONG"]
license = "Apache-2.0"
description = "A PHP interpreter with build/package manager written in Rust"
edition = "2024"
repository = "https://github.com/yingkitw/phprs"
homepage = "https://github.com/yingkitw/phprs"
documentation = "https://docs.rs/phprs"
keywords = ["php", "interpreter", "build", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JSON repair
anyrepair = "0.2"

# Testing
pulldown-cmark = "0.9"

# Utilities
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Workspace for binary crates
[workspace]
members = [
    ".",
    "bin/php",
    "bin/php-pkg",
    "bin/php-server",
]
