[package]
name = "phprs"
version = "0.1.2"
authors = ["Ying kit WONG"]
license = "Apache-2.0"
description = "A PHP interpreter with build/package manager written in Rust"
edition = "2024"
repository = "https://github.com/yingkitw/phprs"
homepage = "https://github.com/yingkitw/phprs"
documentation = "https://docs.rs/phprs"
keywords = ["php", "interpreter", "build", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

# Note: The binary is in the bin/phprs workspace member

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI (for default binary)
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
semver = { version = "1.0", features = ["serde"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
dirs = "5.0"
tempfile = "3.10"
log = "0.4"
env_logger = "0.11"

# JSON repair
anyrepair = "0.2"

# Testing
pulldown-cmark = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true
incremental = true

# Workspace for binary crates
[workspace]
members = [
    ".",
    "bin/phprs",
]
