[package]
name = "phprs"
version = "0.1.9"
authors = ["Ying kit WONG"]
license = "Apache-2.0"
description = "A PHP interpreter with build/package manager written in Rust"
edition = "2024"
repository = "https://github.com/yingkitw/phprs"
homepage = "https://github.com/yingkitw/phprs"
documentation = "https://docs.rs/phprs"
keywords = ["php", "interpreter", "build", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

# Note: The binary is in the bin/phprs workspace member

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI (for default binary)
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
toml = "0.8"
semver = { version = "1.0", features = ["serde"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
getrandom = "0.2"
dirs = "5.0"
tempfile = "3.10"
log = "0.4"
env_logger = "0.11"

# JSON repair
anyrepair = "0.2"

# Regular expressions
regex = "1.10"

# URL parsing
url = "2.5"

# Unicode handling
unicode-segmentation = "1.11"

# Testing
pulldown-cmark = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true
incremental = true

# Rust examples live under examples/rust/; register each target explicitly.
[[example]]
name = "basic_types"
path = "examples/rust/basic_types.rs"

[[example]]
name = "error_handling"
path = "examples/rust/error_handling.rs"

[[example]]
name = "filesystem"
path = "examples/rust/filesystem.rs"

[[example]]
name = "hash_table"
path = "examples/rust/hash_table.rs"

[[example]]
name = "memory_management"
path = "examples/rust/memory_management.rs"

[[example]]
name = "operators"
path = "examples/rust/operators.rs"

[[example]]
name = "performance_demo"
path = "examples/rust/performance_demo.rs"

[[example]]
name = "runtime"
path = "examples/rust/runtime.rs"

[[example]]
name = "string_operations"
path = "examples/rust/string_operations.rs"

# Workspace for binary crates
[workspace]
members = [
    ".",
    "bin/phprs",
]
